Fixed z-index on the “get release” button

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -93,6 +93,8 @@
 
 .mt-auto { margin-top: auto; }
 
+.z-500 { z-index: 500; }
+
 @media screen and (max-width: 40rem) {
   .xs-col-12 {
     width: 100%;
